# luvi

./: .gitmodules  .travis.yml  CMakeLists.txt  Makefile
custom/: custom.c  lgdbm.c  lsqlite3.c  luvi_custom.c  time.c  winreg.c
custom/iconv/: iconv.h  luaiconv.c  win_iconv.c
custom/mime/: mime.c
custom/misc/: c_misc.c  cephes.c  hw_cpu.c  misc.c  poker.c
samples/gdbm.app/: main.lua
src/: lminiz.c  main.c
